amq-broker/overlays/broker-2/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: amq-broker
spec:
  selector:
    app: amq-broker-2
  ports:
    - name: core-messaging-2
      port: 61616
      targetPort: 62616
    - name: web-console-2
      port: 8161
      targetPort: 8261
    - name: amqp-2
      port: 5672
      targetPort: 6672
    - name: mqtt-2
      port: 1883
      targetPort: 2883
    - name: stomp-2
      port: 61613
      targetPort: 62613
