amq-broker/overlays/broker-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amq-broker-2
spec:
  ports:
    - port: 62616
      targetPort: 62616
  selector:
    app: amq-broker-2
